...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.05" />

            <Button
                android:id="@+id/btnTownSelection"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:background="#673AB7"
                android:textColor="#FFFFFF"
                app:backgroundTint="#3A7BCA"
...
